--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 
 [dependencies]
-minidom = "*"
-quick-xml = "*"
-hyper = "0.11"
-futures = "0.1"
-tokio-core = "0.1"
+minidom = "0.5.0"
+quick-xml = "0.7.3"
+hyper = "0.11.2"
+futures = "0.1.14"
+tokio-core = "0.1.6"
 smallstring = "*"
+error-chain = "0.10.0"
+futures-error-chain = "0.1.0"
 
 [dev-dependencies]
 time = "*"
