--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ error-chain = "0.10.0"
 futures = "0.1.14"
 futures-error-chain = "0.1.0"
 hyper = "0.11.2"
+hyper-tls = "0.1.2"
 minidom = "0.5.0"
 quick-xml = "0.7.3"
 smallstring = "*"
