Refactor network code using futures-await

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 custom_derive = "0.1.1"
 enum_derive = "0.1.7"
 error-chain = "0.10.0"
-futures = "0.1.14"
+futures-await = "0.1.0"
 futures-error-chain = "0.1.0"
 hyper = "0.11.2"
 hyper-tls = "0.1.2"
