Build from python!

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,10 +2,11 @@
 name = "cmsis"
 version = "0.1.0"
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
+build = "build.rs"
 
 [lib]
 name = "cmsis"
-crate-type = ["dylib", "rlib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 custom_derive = "0.1.1"
@@ -25,9 +26,11 @@ slog-term = "^2"
 slog-async = "^2"
 clap = "2.19.0"
 
+[build-dependencies]
+cbindgen = "0.1"
+
 [dev-dependencies]
 time = "*"
-slog-stdlog = "^2"
 
 [profile.release]
 debug = true
