Combine gitignore for python + rust

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/target/
+# Build stuff
+/rust/Cargo.lock
+/rust/target/
+/build
+/dist
+**/_native__lib.so
+*.egg-info
+
+# Editor stuff
+.#*
 **/*.rs.bk
-Cargo.lock
