--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,7 +20,7 @@ minidom = "0.5.0"
 quick-xml = "0.7.3"
 smallstring = "*"
 tokio-core = "0.1.6"
-xdg = "2.1.0"
+app_dirs = "^1.1.1"
 slog = "^2"
 slog-term = "^2"
 slog-async = "^2"
