--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,11 +20,11 @@ minidom = "0.5.0"
 quick-xml = "0.7.3"
 smallstring = "*"
 tokio-core = "0.1.6"
-app_dirs = "^1.1.1"
 slog = "^2"
 slog-term = "^2"
 slog-async = "^2"
 clap = "2.19.0"
+app_dirs = {git = "https://github.com/theotherjimmy/app-dirs-rs.git", branch = "fix-nightly-1-29"}
 
 [build-dependencies]
 cbindgen = "0.1"
