--- a/rust/pdsc/Cargo.toml
+++ b/rust/pdsc/Cargo.toml
@@ -9,5 +9,8 @@ enum_derive = "0.1.7"
 minidom = "0.5.0"
 slog = "^2"
 clap = "2.19.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 utils = { path = "../utils" }
 pack-index = { path = "../pack-index" }
