--- a/rust/pdsc/Cargo.toml
+++ b/rust/pdsc/Cargo.toml
@@ -12,5 +12,6 @@ clap = "2.19.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+failure = "0.1.1"
 utils = { path = "../utils" }
 pack-index = { path = "../pack-index" }
