--- a/rust/cmsis-update/Cargo.toml
+++ b/rust/cmsis-update/Cargo.toml
@@ -14,6 +14,7 @@ slog-term = "^2"
 slog-async = "^2"
 tokio-core = "0.1.6"
 failure = "0.1.1"
+indicatif = "*"
 
 utils = { path = "../utils" }
 pack-index = { path = "../pack-index" }
