--- a/rust/cmsis-update/Cargo.toml
+++ b/rust/cmsis-update/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 
 [dependencies]
 futures-await = "0.1.0"
-hyper = "0.11.2"
+hyper = "0.11.21"
 hyper-tls = "0.1.2"
 minidom = "0.5.0"
 clap = "2.19.0"
@@ -14,6 +14,7 @@ slog-term = "^2"
 slog-async = "^2"
 tokio-core = "0.1.6"
 failure = "0.1.1"
+pbr = "^1.0.0"
 
 utils = { path = "../utils" }
 pack-index = { path = "../pack-index" }
