--- a/rust/cmsis-update/Cargo.toml
+++ b/rust/cmsis-update/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 
 [dependencies]
-futures-await = "0.1.0"
+futures-await = "0.1.1"
+futures-await-async-macro = "0.1.4"
 hyper = "0.11.21"
 hyper-tls = "0.1.2"
 minidom = "0.5.0"
@@ -19,3 +20,4 @@ pbr = "^1.0.0"
 utils = { path = "../utils" }
 pack-index = { path = "../pack-index" }
 pdsc = { path = "../pdsc" }
+
