--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,3 +17,15 @@ build_script: appveyor.bat
 skip_branch_with_pr: true
 artifacts:
   - path: dist\*
+deploy:
+- provider: S3
+  access_key_id: AKIAJRSWHGVBJUV5HFZA
+  secret_access_key:
+    secure: Oeg8mQ7lfWYLBZ4Qx2saBO+I2/Oe1rPx4JFeB6JWdz/reCQ/RHWij6YZ5LWe8qen
+  region: us-east-1
+  bucket: mbed-os/
+  folder: builds/cmsis-pack-manager/
+  artifact: dist\*
+  set_public: true
+  on:
+    branch: master
