--- a/rust/cmsis-update/Cargo.toml
+++ b/rust/cmsis-update/Cargo.toml
@@ -7,13 +7,13 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 futures-await = "0.1.1"
 futures-await-async-macro = "0.1.4"
 hyper = "0.11.21"
-hyper-tls = "0.1.2"
+hyper-rustls = "0.12.0"
 minidom = "0.5.0"
 clap = "2.19.0"
 slog = "^2"
 slog-term = "^2"
 slog-async = "^2"
-tokio-core = "0.1.6"
+tokio-core = "0.1.17"
 failure = "0.1.1"
 pbr = "^1.0.0"
 
