--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,7 +9,7 @@ slog-term = "^2"
 slog-async = "^2"
 clap = "2.19.0"
 failure = "0.1.1"
-app_dirs = {git = "https://github.com/theotherjimmy/app-dirs-rs.git", branch = "fix-nightly-1-29"}
+app_dirs = "1.2.1"
 pdsc = { path = "pdsc" }
 pack-index = { path = "pack-index" }
 cmsis-update = { path = "cmsis-update" }
