--- a/rust/pack-index/Cargo.toml
+++ b/rust/pack-index/Cargo.toml
@@ -6,8 +6,7 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 [dependencies]
 minidom = "0.5.0"
 quick-xml = "0.7.3"
-smallstring = "*"
 slog = "^2"
 failure = "0.1.1"
-app_dirs = {git = "https://github.com/theotherjimmy/app-dirs-rs.git", branch = "fix-nightly-1-29"}
+app_dirs = "1.2.1"
 utils = { path = "../utils" }
