--- a/rust/cmsis-cli/Cargo.toml
+++ b/rust/cmsis-cli/Cargo.toml
@@ -9,6 +9,7 @@ failure = "0.1.1"
 slog = "^2"
 slog-async = "^2"
 slog-term = "^2"
+pbr = "^1.0.0"
 
 [dependencies.cmsis-update]
 path = "../cmsis-update"
