Use stable rust
 #107 removed the need for nightly, this changes the build process to
make use of stable rust, and upgrades to the most recent version of rustc
as well. Turns out it runs just fine in manylinux1.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,12 +5,12 @@ clone_depth: 1
 environment:
   matrix:
     - TOOLCHAIN_VERSION: 14.0
-      channel: nightly-2018-11-07
+      channel: stable
       target: i686-pc-windows-msvc
       PYTHON: "C:\\Python37"
       platform: Win32
     - TOOLCHAIN_VERSION: 14.0
-      channel: nightly-2018-11-07
+      channel: stable
       target: x86_64-pc-windows-msvc
       PYTHON: "C:\\Python37-x64"
       platform: x64
