--- a/rust/pdsc/Cargo.toml
+++ b/rust/pdsc/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 [dependencies]
 minidom = "0.5.0"
 slog = "^2"
-serde = "1.0"
-serde_derive = "1.0"
+serde = "^1.0.89"
+serde_derive = "^1.0.89"
 serde_json = "1.0"
 failure = "0.1.1"
 utils = { path = "../utils" }
