--- a/rust/cmsis-update/Cargo.toml
+++ b/rust/cmsis-update/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 
 [dependencies]
-futures = "=0.1.25"
-hyper = "0.11.21"
-hyper-rustls = "0.12.0"
+futures = "0.1.25"
 minidom = "0.5.0"
 slog = "^2"
 slog-term = "^2"
@@ -19,3 +17,7 @@ utils = { path = "../utils" }
 pack-index = { path = "../pack-index" }
 pdsc = { path = "../pdsc" }
 
+[dependencies.reqwest]
+version = "0.9.21"
+default_features = false
+features = ["rustls-tls"]
