Unified all crates into a big one. The two binary crates (cmsis-cffi, cmsis-cli) remain separate.

--- a/rust/cmsis-cffi/Cargo.toml
+++ b/rust/cmsis-cffi/Cargo.toml
@@ -16,3 +16,4 @@ cmsis-pack = { version = "0.1.0", path = "../cmsis-pack" }
 
 [build-dependencies]
 cbindgen = "0.9.1"
+cmsis-pack = { version = "0.1.0", path = "../cmsis-pack" }
