--- a/rust/cmsis-cffi/Cargo.toml
+++ b/rust/cmsis-cffi/Cargo.toml
@@ -12,4 +12,4 @@ slog = "^2"
 slog-term = "^2"
 slog-async = "^2"
 failure = "0.1.1"
-cmsis = { path = "../cmsis" }
+cmsis-pack = { path = "../cmsis-pack" }
