--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -5,10 +5,10 @@ version = "0.2.0"
 
 [dependencies]
 failure = "0.1.1"
-futures = "0.1.25"
-minidom = "0.6.0"
-quick-xml = "0.9.0"
-rustc-demangle = "=0.1.13"
+futures = "0.3.5"
+minidom = "0.12.0"
+quick-xml = "0.18.1"
+rustc-demangle = "0.1.16"
 serde = "^1.0.89"
 serde_derive = "^1.0.89"
 serde_json = "1.0"
@@ -16,7 +16,7 @@ slog = "^2"
 slog-term = "^2"
 slog-async = "^2"
 tokio-core = "0.1.17"
-reqwest = { version = "0.9.21", default_features = false, features = ["rustls-tls"]}
+reqwest = { version = "0.10.6", default_features = false, features = ["rustls-tls"]}
 
 [dev-dependencies]
 time = "*"
