Update to 2018 edition, run "cargo fmt" and "cargo clippy"

--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -2,6 +2,7 @@
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
 name = "cmsis-pack"
 version = "0.2.0"
+edition = "2018"
 
 [dependencies]
 failure = "0.1.1"
