--- a/rust/cmsis-cffi/Cargo.toml
+++ b/rust/cmsis-cffi/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cmsis-cffi"
 version = "0.2.0"
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
+edition = "2018"
 
 [lib]
 name = "cmsis_cffi"
