--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -17,7 +17,7 @@ futures = "0.1.29"
 log = "0.4.8"
 minidom = "^0.12.0"
 quick-xml = "0.17.2"
-reqwest = { version = "0.9.24", default_features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.9.24", default_features = false, features = ["default-tls", "trust-dns"] }
 rustc-demangle = "0.1.16"
 serde = "^1.0.89"
 serde_derive = "^1.0.89"
