--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -13,17 +13,18 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
+bytes = "0.5.5"
 failure = "0.1.1"
-futures = "0.1.29"
+futures = "0.3.5"
 log = "0.4.8"
 minidom = "^0.12.0"
 quick-xml = "0.17.2"
-reqwest = { version = "0.9.24", default_features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.10.4", default_features = false, features = ["rustls-tls", "stream"] }
 rustc-demangle = "0.1.16"
-serde = "^1.0.89"
-serde_derive = "^1.0.89"
+serde = { version = "^1.0.114", features = ["derive"] }
+serde_derive = "^1.0.114"
 serde_json = "1.0"
-tokio-core = "0.1.17"
+tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "stream"] }
 
 [dev-dependencies]
 time = "0.2.16"
