Add cache for Rust build

--- a/.github/workflows/wheels-linux.yml
+++ b/.github/workflows/wheels-linux.yml
@@ -8,13 +8,13 @@ on:
 jobs:
   manylinux:
     runs-on: ubuntu-latest
-    container: quay.io/pypa/${{ matrix.MANYLINUX.CONTAINER }}
+    container: ${{ matrix.MANYLINUX.CONTAINER }}
     strategy:
       matrix:
         PYTHON: ["cp36-cp36m"] # "cp27-cp27m", "cp27-cp27mu"
         MANYLINUX:
           - NAME: manylinux2014_x86_64
-            CONTAINER: "manylinux2014_x86_64"
+            CONTAINER: quay.io/pypa/manylinux2014_x86_64
     name: "${{ matrix.PYTHON }} for ${{ matrix.MANYLINUX.NAME }}"
     steps:
       - uses: actions/checkout@v2
@@ -40,6 +40,13 @@ jobs:
         with:
           toolchain: stable
       - uses: Swatinem/rust-cache@v1
+      - name: Cache Rust Build
+        uses: actions/cache@v2
+        with:
+          path: rust/target
+          key: ${{ runner.os }}-rust-target-${{ hashFiles('rust/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-target-
       - name: Build Wheel
         run: |
           export PATH="$HOME/.cargo/bin:$PATH"
@@ -48,18 +55,17 @@ jobs:
               PY_LIMITED_API="--py-limited-api=cp3${BASH_REMATCH[1]}"
           fi
           .venv/bin/python setup.py bdist_wheel $PY_LIMITED_API
-          mkdir tmp-wheelhouse wheelhouse cpm-wheelhouse
-          mv dist/cmsis*.whl tmp-wheelhouse
+          mkdir wheelhouse1 wheelhouse2 wheelhouse3
+          mv dist/cmsis*.whl wheelhouse1
       - name: Run auditwheel
         run: |
-          auditwheel repair --plat ${{ matrix.MANYLINUX.NAME }} tmp-wheelhouse/cmsis*.whl -w wheelhouse/
+          auditwheel repair --plat ${{ matrix.MANYLINUX.NAME }} wheelhouse1/cmsis*.whl -w wheelhouse2/
       - name: Install and test
         run: |
-          .venv/bin/pip install cmsis-pack-manager --no-index -f wheelhouse/
+          .venv/bin/pip install cmsis-pack-manager --no-index -f wheelhouse2/
           .venv/bin/pytest --cache-clear
-      - run: |
-          mv wheelhouse/cmsis*.whl cpm-wheelhouse/
+          mv wheelhouse2/cmsis*.whl wheelhouse3/
       - uses: actions/upload-artifact@v2
         with:
           name: "cmsis-pack-manager-${{ github.event.inputs.version }}-${{ matrix.MANYLINUX.NAME }}-${{ matrix.PYTHON }}"
-          path: cpm-wheelhouse/
+          path: wheelhouse3/
