--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -13,18 +13,23 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-bytes = "0.5.5"
+bytes = "1.0"
 failure = "0.1.1"
-futures = "0.3.5"
+futures = "0.3.8"
 log = "0.4.8"
 minidom = "^0.12.0"
 quick-xml = "0.17.2"
-reqwest = { version = "0.10.4", default_features = false, features = ["rustls-tls", "stream"] }
 rustc-demangle = "0.1.16"
-serde = { version = "^1.0.114", features = ["derive"] }
-serde_derive = "^1.0.114"
+serde = { version = "1.0.118", features = ["derive"] }
+serde_derive = "1.0.118"
 serde_json = "1.0"
-tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "stream"] }
+tokio = { version = "1.0", features = ["macros", "rt"] }
+
+[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
+reqwest = { version = "0.11.0", default_features = false, features = ["native-tls", "trust-dns", "stream"] }
+
+[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
+reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls", "trust-dns", "stream"] }
 
 [dev-dependencies]
 time = "0.2.16"
