--- a/rust/cmsis-cli/Cargo.toml
+++ b/rust/cmsis-cli/Cargo.toml
@@ -18,7 +18,7 @@ name = "cmsis-cli"
 path = "src/main.rs"
 
 [dependencies]
-app_dirs = "1.2.1"
+directories = "3"
 clap = "2.33.1"
 failure = "0.1.1"
 log = "0.4.8"
