--- a/.github/workflows/ci-build-wheel-macos.yml
+++ b/.github/workflows/ci-build-wheel-macos.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Install Rust aarch64-apple-darwin target
+        run: rustup target add aarch64-apple-darwin      
+
       - uses: actions/setup-python@v2
         name: Install Python
         with:
