Fix wheel version

--- a/.github/workflows/ci-build-wheel-windows.yml
+++ b/.github/workflows/ci-build-wheel-windows.yml
@@ -11,10 +11,13 @@ jobs:
     env:
       CIBW_SKIP: "cp27-* cp34-* cp35-* cp36-* pp* *-win32"
       CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm setuptools_scm_git_archive"
+      CIBW_BUILD_VERBOSITY: 1
       RUSTFLAGS: "-Ctarget-feature=+crt-static"
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -27,7 +30,7 @@ jobs:
           python-version: '3.7'
 
       - name: Build wheels
-        uses: joerick/cibuildwheel@v1.10.0          
+        uses: pypa/cibuildwheel@v1.12.0
 
       - uses: actions/upload-artifact@v2
         with:
