--- a/.github/workflows/ci-build-wheel.yml
+++ b/.github/workflows/ci-build-wheel.yml
@@ -23,9 +23,12 @@ jobs:
       CIBW_SKIP: "cp27-* cp34-* cp35-* pp*"
       CIBW_BEFORE_ALL_LINUX: "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y && yum install -y openssl-devel"
       CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm setuptools_scm_git_archive"
+      CIBW_BUILD_VERBOSITY: 1
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -48,7 +51,7 @@ jobs:
           python-version: '3.7'
 
       - name: Build wheels
-        uses: joerick/cibuildwheel@v1.10.0          
+        uses: pypa/cibuildwheel@v1.12.0
 
       - uses: actions/upload-artifact@v2
         with:
