Setup: replace test_requirements.txt with extras dependency.

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,6 @@ project_urls =
     Discussions = https://github.com/pyocd/cmsis-pack-manager/discussions
     Changelog = https://github.com/pyocd/cmsis-pack-manager/releases
 
-
 [options]
 packages = find:
 install_requires =
@@ -45,12 +44,16 @@ tests_require =
 include_package_data = True
 zip_safe = False
 
+[options.extras_require]
+test =
+    pytest>=6.0
+    hypothesis
+    jinja2
+    mock
+
 [options.entry_points]
 console_scripts =
     pack-manager = cmsis_pack_manager.pack_manager:main
-
-[aliases]
-test = pytest
 
 [tool:pytest]
 python_files = tests/*.py
