--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,10 @@ jobs:
           find ./ -name "*.pyc" -type f -print0 |xargs -0 rm -rf
           find ./ -name "*.so" -type f -print0 |xargs -0 rm -rf
           pip install -U setuptools pip wheel
-          pip install -U --upgrade-strategy=eager -r test_requirements.txt
           sudo apt install libffi-dev
       - name: Compile
         run: |
-          pip install -U --upgrade-strategy=eager .
+          pip install -U --upgrade-strategy=eager .[test]
       - name: Run Tests
         run: |
           pytest --cache-clear
