--- a/.github/workflows/ci-build-wheel-windows.yml
+++ b/.github/workflows/ci-build-wheel-windows.yml
@@ -10,7 +10,7 @@ jobs:
         os: [windows-latest]
     env:
       CIBW_SKIP: "cp27-* cp34-* cp35-* cp36-* pp* *-win32"
-      CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm setuptools_scm_git_archive"
+      CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm"
       CIBW_BUILD_VERBOSITY: 1
       RUSTFLAGS: "-Ctarget-feature=+crt-static"
 
