--- a/rust/cmsis-cffi/Cargo.toml
+++ b/rust/cmsis-cffi/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "cmsis-cffi"
-version = "0.2.0"
-authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
+version = "0.3.0"
+authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
+           "Chris Reed <flit@me.com>",
+           "Mathias Brossard <mathias.brossard@arm.com>"]
+description = "FFI for cmsis-pack"
+license = "Apache-2.0"
 edition = "2018"
 
 [lib]
