--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -22,7 +22,7 @@ rustc-demangle = "0.1.16"
 serde = "^1.0.89"
 serde_derive = "^1.0.89"
 serde_json = "1.0"
-tokio-core = "0.1.17"
+tokio = "0.1.22"
 
 [dev-dependencies]
 time = "0.2.16"
