--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -13,7 +13,8 @@ edition = "2018"
 
 [dependencies]
 failure = "0.1.1"
-futures = "0.1.29"
+futures1 = { package = "futures", version = "0.1.29" }
+futures = { version = "0.3.17", features = ["compat"] }
 log = "0.4.8"
 minidom = "^0.12.0"
 quick-xml = "0.17.2"
@@ -22,7 +23,7 @@ rustc-demangle = "0.1.16"
 serde = "^1.0.89"
 serde_derive = "^1.0.89"
 serde_json = "1.0"
-tokio = "0.1.22"
+tokio = "0.2.25"
 
 [dev-dependencies]
 time = "0.2.16"
