--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -17,11 +17,9 @@ bytes = "1.0"
 failure = "0.1.1"
 futures = "0.3.8"
 log = "0.4.8"
-minidom = "^0.12.0"
-quick-xml = "0.17.2"
+minidom = "0.12.0"
 rustc-demangle = "0.1.16"
 serde = { version = "1.0.118", features = ["derive"] }
-serde_derive = "1.0.118"
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["macros", "rt"] }
 
@@ -32,7 +30,7 @@ reqwest = { version = "0.11.0", default_features = false, features = ["native-tl
 reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls", "trust-dns", "stream"] }
 
 [dev-dependencies]
-time = "0.2.16"
+time = "0.3.3"
 
 [features]
 default = []
