setup.cfg: remove quotes from maintainer and maintainer_email.
PyPI complains about invalid email addresses with the quotes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ description = Python manager for CMSIS-Pack index and cache with fast Rust backe
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pyocd/cmsis-pack-manager
-maintainer = "Mathias Brossard, Chris Reed"
-maintainer_email = "mathias.brossard@arm.com, flit@me.com"
+maintainer = Mathias Brossard, Chris Reed
+maintainer_email = mathias.brossard@arm.com, flit@me.com
 license = Apache 2.0
 license_file = LICENSE
 classifiers =
