--- a/rust/cmsis-cli/Cargo.toml
+++ b/rust/cmsis-cli/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "cmsis-cli"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
            "Chris Reed <flit@me.com>",
            "Mathias Brossard <mathias.brossard@arm.com>"]
+repository = "https://github.com/pyocd/cmsis-pack-manager"
 description = "Simple command line interface for CMSIS Pack management"
 license = "Apache-2.0"
 edition = "2018"
@@ -23,4 +24,4 @@ failure = "0.1.1"
 log = "0.4.8"
 simplelog = "0.8.0"
 pbr = "^1.0.0"
-cmsis-pack = { path="../cmsis-pack" }
+cmsis-pack = { path = "../cmsis-pack" }
