--- a/rust/cmsis-cffi/Cargo.toml
+++ b/rust/cmsis-cffi/Cargo.toml
@@ -18,5 +18,7 @@ crate-type = ["cdylib"]
 ctor = "0.1.15"
 log = "0.4.8"
 simplelog = "0.10.0"
-failure = "0.1.1"
 cmsis-pack = { version = "0.5.0", path = "../cmsis-pack" }
+anyhow = { version = "1.0.56", features = ["backtrace"] }
+
+[features]
