--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -14,7 +14,6 @@ edition = "2018"
 
 [dependencies]
 bytes = "1.0"
-failure = "0.1.1"
 futures = "0.3.8"
 log = "0.4.8"
 minidom = "0.12.0"
@@ -23,6 +22,7 @@ serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["macros", "rt"] }
 reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls", "trust-dns", "stream"] }
+anyhow = "1.0.56"
 
 [dev-dependencies]
 time = "0.3.3"
