--- a/.github/workflows/ci-build-wheel-macos.yml
+++ b/.github/workflows/ci-build-wheel-macos.yml
@@ -10,31 +10,31 @@ jobs:
         os: [macos-latest]
     env:
       CIBW_ARCHS_MACOS: x86_64 universal2
-      CIBW_SKIP: "cp27-* cp34-* cp35-* cp36-* pp* *-win32"
+      CIBW_BUILD: "cp39-*"
       CIBW_ENVIRONMENT: 'PATH="$PATH:/usr/share/rust/.cargo/bin:$HOME/.cargo/bin"'
-      CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm"
       CIBW_BUILD_VERBOSITY: 1
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.63.0
+          profile: minimal
 
       - name: Install Rust aarch64-apple-darwin target
         run: rustup target add aarch64-apple-darwin
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.7'
+          python-version: 3.9
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.1.3
+        uses: pypa/cibuildwheel@v2.11.2
 
       - uses: actions/upload-artifact@v2
         with:
