--- a/.github/workflows/ci-build-wheel-windows.yml
+++ b/.github/workflows/ci-build-wheel-windows.yml
@@ -9,28 +9,28 @@ jobs:
       matrix:
         os: [windows-latest]
     env:
-      CIBW_SKIP: "cp27-* cp34-* cp35-* cp36-* pp* *-win32"
-      CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm"
+      CIBW_BUILD: "cp39-*"
       CIBW_BUILD_VERBOSITY: 1
       RUSTFLAGS: "-Ctarget-feature=+crt-static"
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.63.0
+          profile: minimal
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.7'
+          python-version: 3.9
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.1.3
+        uses: pypa/cibuildwheel@v2.11.2
 
       - uses: actions/upload-artifact@v2
         with:
