--- a/.github/workflows/ci-build-wheel.yml
+++ b/.github/workflows/ci-build-wheel.yml
@@ -14,26 +14,32 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     env:
-      CIBW_ARCHS_LINUX: auto aarch64
+      CIBW_ARCHS_LINUX: auto # aarch64
       CIBW_ARCHS_MACOS: x86_64 universal2
       CIBW_ARCHS_WINDOWS: auto
       CIBW_ENVIRONMENT_LINUX: 'PATH="$PATH:/usr/share/rust/.cargo/bin:$HOME/.cargo/bin"'
       CIBW_ENVIRONMENT_MACOS: 'PATH="$PATH:/usr/share/rust/.cargo/bin:$HOME/.cargo/bin"'
       CIBW_ENVIRONMENT_WINDOWS: 'RUSTFLAGS="-Ctarget-feature=+crt-static"'
-      CIBW_SKIP: "cp27-* cp34-* cp35-* pp*"
-      CIBW_BEFORE_ALL_LINUX: "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y && yum install -y openssl-devel"
-      CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip wheel setuptools setuptools_scm"
+      CIBW_BUILD: "cp39-*"
+      CIBW_SKIP: "cp39-musl*"
+      CIBW_BEFORE_ALL_LINUX: >
+        yum install -y libffi-devel openssl-devel &&
+        curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain 1.63.0 --profile=minimal -y &&
+        rustup show &&
+        cargo install empty-library || true
       CIBW_BUILD_VERBOSITY: 1
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Install Rust
+        if: runner.os != 'Linux'
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.63.0
+          profile: minimal
 
       - name: Install Rust aarch64-apple-darwin target
         if: runner.os == 'macOS'
@@ -45,14 +51,15 @@ jobs:
         with:
           platforms: arm64
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.7'
+          python-version: 3.9
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.1.3
+        uses: pypa/cibuildwheel@v2.11.2
 
       - uses: actions/upload-artifact@v2
         with:
+          name: wheels
           path: ./wheelhouse/*.whl
